# snakemake-scheduler-plugin-greedy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/snakemake_scheduler_plugin_greedy/: __init__.py
tests/: test_plugin.py
