[project]
dependencies = [ "snakemake-interface-common>=1.23.0,<2", "snakemake-interface-scheduler-plugins>=2.0.2,<3",]
name = "snakemake-scheduler-plugin-greedy"
requires-python = ">=3.11,<4.0"
version = "0.1.0"

authors = [
  {name = "Filipe G. Vieira"},
]
maintainers = [
  {name = "Filipe G. Vieira"},
]
description = "A greedy Snakemake scheduler plugin."
readme = "README.md"
license = "MIT"
keywords = ["snakemake", "plugin", "scheduler", "greedy"]

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling",]

[dependency-groups]
dev = [ "ruff", "coverage", "pytest", "twine", "build",]

[project.urls]
Repository = "https://github.com/your/plugin"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/scheduler/greedy.html"

[tool.pixi.workspace]
channels = [ "conda-forge",]
platforms = [ "linux-64",]

[tool.pixi.tasks]

[tool.pixi.pypi-dependencies.snakemake_scheduler_plugin_greedy]
path = "."
editable = true

[tool.pixi.environments.dev]
features = [ "dev",]

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
test = "pytest --cov=snakemake-scheduler-plugin-greedy --cov-report=xml:coverage-report/coverage.xml --cov-report=term-missing tests/tests.py"
build = "python -m build"
check-build = { cmd = "python -m twine check dist/*", depends-on = ["build"] }
